# bitrecs-subnet

./: .env.dev.example  .gitignore  LICENSE  README.md  env.sample  install.sh  install_subnet_dependencies.sh  min_compute.yml  miner_and_validator_setup.md  miner_log_parser.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  start-miner-2.sh  start-miner.sh  start-validator.sh  start.sh  start_validator.py
.github/workflows/: black.yml  build.yml  dlink-check.yml  dlint.yml
bitrecs/: __init__.py  protocol.py
bitrecs/api/: api_core.py  api_counter.py  api_server.py  get_query_axons.py  utils.py
bitrecs/base/: miner.py  neuron.py  validator.py
bitrecs/commerce/: product.py  user_action.py  user_profile.py
bitrecs/llms/: chat_gpt.py  chutes.py  factory.py  gemini.py  llama_local.py  open_router.py  prompt_factory.py  vllm_router.py
bitrecs/utils/: color.py  config.py  constants.py  distance.py  gpu.py  logging.py  r2.py  runtime.py  uids.py  version.py  wandb.py
bitrecs/validator/: forward.py  reward.py  (+1 more)
bitsec/: protocol.py
docs/: running_miner.md  running_validator.md
neurons/: miner.py  miner_proxy.py  validator.py  validator_proxy.py
scripts/: auto_updater.sh  compare_models.py  install_miner.sh  install_vali.sh  val_log.sh
template/: __init__.py  mock.py  protocol.py
tests/: json_tests.py  test_api.py  test_auth.py  test_data.py  test_distance.py  test_json.py  test_llm.py  test_llm_2.py  test_llm_cloud.py  test_meta.py  test_order_predict.py  test_path.py  test_profiles.py  test_reason.py  test_tokenizer.py  test_wandb.py  utils.py
(+63 files in other folders)
